--- a/templates/views/404_page.hbs
+++ b/templates/views/404_page.hbs
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+
+    <title>Not Found</title>
 </head>
 <body>
-    <h2>{{title}}</h2>
-    <p>Created by {{name}}</p>
+
+    <h4>{{message}}</h4>
     
 </body>
 </html>
