--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <h2>help with hbs</h2>
+
+    {{>header}}
+
+    <h2>{{title}}</h2>
+    <p>Created by {{name}}</p>
+    
 </body>
 </html>
