--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,6 +13,17 @@
 
     <h2>{{title}}</h2>
     <p>Created by {{name}}</p>
+
+    <form>
+        <input type="text" placeholder="Location">
+        <button>Search</button>
+    </form>
+
+    <p class='first-p'></p>
+    <p class='second-p'></p>
+
+
+    <script src="/js/app.js"></script>
     
 </body>
 </html>
